--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -139,3 +139,35 @@
   width: 100%;
 }
 
+.search_label {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.2rem;
+  margin-left: 2rem;
+  margin-top: 0.7rem;
+  display: block;
+  transition: all 0.3s;
+  transform: translateY(0rem);
+}
+
+.search_input {
+  font-family: 'Roboto', sans-serif;
+  color: #333;
+  font-size: 1.2rem;
+  margin: 0 auto;
+  padding: 1.5rem 2rem;
+  border-radius: 6.2rem;
+  border:1px solid #333333;
+  background-color: rgb(255, 255, 255);
+  width: 90%;
+  display: block;
+  transition: all 0.3s;
+}
+
+.search_input:placeholder-shown + .search_label {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateY(-4rem);
+  transform: translateY(-4rem);
+}
+
+
