--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -128,15 +128,23 @@
   border: 1px solid #f0f0f0;
   box-sizing: border-box;
   border-radius: 2px;
-  padding: 0px 60px;
+  padding: 0px 20px;
   padding-top: 30px;
   max-height: 450px;
   width: 500px;
   overflow-y: scroll;
 }
 
-.submit-record {
+.group-comment {
   width: 100%;
+  background: #eaeaea;
+  text-align: center;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.submit-record {
+  margin-top: 30px;
 }
 
 .search_label {
